<resources>
    <string name="app_name">Bal Asha</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Children Home</item>
        <item>Adoption</item>
        <item>Bal Asha Child Development Centre</item>
        <item>Bal Asha Education Sponsorship</item>
        <item>Bal Asha Awareness and Training</item>
        <item>Donate</item>
        <item>Testimonials</item>
        <item>About Us</item>
    </string-array>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_text"> Bal Asha Trust works for children in need of care and protection.  Children who are found abandoned at various public places around Mumbai, India every year.\n\n
These children are in dangerous situations as they are left to the mercy of stray animals, insects and wherever anti-social elements and unhygienic condition exist. There are also children who are surrendered by their birth parents as they are unable to take care of them mainly due to social and medical reasons.\n\n
Bal Asha Trust’s unique, leading and professionally managed NGO was <b>awarded with Ahilyabai Holkar Award by the Government of Maharashtra.</b>\n\n
We are giving quality child care, love, rehabilitation and future to abandoned and destitute children in our children’s home.   We also place children in loving and caring Adoptive families through Indian courts.\n\n
Our charity also provides vulnerable children within our communities various supports through our programs such as Child Development Centre and Education Sponsorship.  Bal Asha Trust also creates awareness about its work and plight of children through training programs.
</string>
    <string name="home_text_footer">Bal Asha Trust, Anand Niketan, Dr. E. Moses Road, Mahalaxmi, Mumbai 400011\n\n
Phone no : 022-24944090 / 24926526 | Email: info@balashatrust.org | www.balashatrust.org</string>
    <string name="about_us_text">Bal Asha Trust is a registered Charity working for the development of children in need of care and protection.   The organization has taken care of more than 1500 children in the past 30 years.\n\n
<b><center>VISION</center></b>\n\n
"Bal Asha’s vision is a world where every child has a safe and warm home, loving family, equal rights to food, good health, education, development and a FUTURE."\n\n

<b><center>MISSION</center></b>\n\n
"Bal Asha Trust believes every vulnerable child has the right to a brighter tomorrow.\n\n
Our charitable organization advocates for the emotional and physical safety of children uprooted by destitution.\n\n
We provide children with access to a safe home, nutrition, quality medical care, education, recreation and rehabilitation.\n\n
Bal Asha also places children in stable family environments by reuniting them with lost relatives or finding loving families through legal adoption.\n\n
We aim to ensure the development of children through special programs such as education sponsorship and developmental centre for disable children.\n\n
Additionally, our dedicated team of professionals strives to spread local and global awareness of the many challenges faced by these children and their families.\n\n
Above all, we believe in empowering children with hope and better future to each child in need of care and protection."\n\n
</string>
    <string name="children_home_text">
        Bal Asha Trust runs provides quality care childrens home for abandoned and destitute children upto the age of 12 years.   Around 70 children can be accommodated in the home.\n\n
The meaning of Bal Asha is Children’s Hope and true to its meaning the home for vulnerable children has received more than 1500 children in the past 30 years.\n\n
The Home is located at Bal Asha Trust, KGVM, Anand Niketan on Dr. E. Moses Road, Mahalaxmi, Mumbai 400 011.\n\n
Bal Asha Trust has a spectrum of services for these children as they are in crucial stage of growth and development.  Bal Asha Trust makes solid efforts in giving stimulation, nutrition, medical care, education, warmth, love and emotional security to these children.\n\n
Bal Asha Trust has a comprehensive health care and developmental intervention for the children living in the home.  We have a well qualified and experienced team of doctors, psychologist, social workers, occupational therapist, speech therapist, nurses and caretakers for their 24 x 7 care.\n\n
There are few children with special needs like blindness, cerebral palsy and mentally challenged.  They are known as special children.  They receive the required intervention from medical experts.  Bal Asha Trust provides as much care and support to these children who are not Adopted due to their special needs.\n\n
All major Indian festivals are celebrated and children are taken to various outdoor activities and visits.

    </string>
    <string name="u2022_procedure_for_inter_country_adoption">• Procedure for Inter Country Adoption</string>
    <string name="u2022_selection_of_child_in_country_adoption">• Selection of Child - In Country\n\u0020 Adoption</string>
    <string name="u2022_procedure_for_domestic_adoption">• Procedure for Domestic Adoption</string>
    <string name="adoption_main_text">Bal Asha Trust believes that every child’s first right is to grow in his own biological family he/she is born into.  If the child is unable to grow due to reasons beyond control then the child has a right to be placed in a suitable Adoptive family through a legal procedure.\n\n
Bal Asha Trust fully believes and acts as per the preamble of the Hague Convention which says <b>“Recognizing that the child, for the full and harmonious development of his or her personality should grow up in a family environment, in an atmosphere of happiness, love and understanding.”</b>\n\n

Bal Asha Trust is a licensed Adoption Organization by the Government of Maharashtra to place children in Adoption with domestic families.  Bal Asha Trust is also recognized by Central Adoption Resource Authority, Ministry of Women and Child Development, Government of India to place children who may not find suitable placements in India in Inter Country Adoption.\n\n
Children which are placed in Adoption are declared  “Free for Adoption” by Child Welfare Committees after stringently following procedures under the Juvenile Justice Act 2006.  Bal Asha Trust places children in Legal Adoption only through Indian Courts.\n\n
Bal Asha Trust specializes in Adoption placements of Special Needs and Older Children in Legal Adoptions.\n\n
Bal Asha Trust social workers are professionally qualified and experienced in Adoption procedures.\n\n
Bal Asha Trust is meticulous in following all procedures, rules and regulations while placing children in Legal Adoption.  We believe that Adoption process is conducive where there needs to be mutual trust, faith, confidence and respect between all stakeholders.\n\n
</string>
    <string name="domestic_adoption_text">
(1) Every resident Indian prospective adoptive parents, who intends to adopt a child, shall register online (www.cara.nic.in) in Child Adoption Resource Information and Guidance System (CARINGS) by filling up the application form and uploading the relevant documents.\n\n

(2) The registration shall be complete and confirmed to the prospective adoptive parents immediately on receipt of the completed application form and required documents on CARINGS.\n\n

(3) The prospective adoptive parents shall get their registration number from the acknowledgement slip and use it for viewing the progress of their case.\n\n

(4) The home study report of the prospective adoptive parents shall be prepared by the specialised adoption agency in the State, where prospective adoptive parents are located, through its social worker.\n\n

(5) The home study report shall be completed within one month from the date of submission of requisite documents.\n\n

(6) The home study report will be posted in the CARINGS by the specialised adoption agency as soon as it is complete.\n\n

(7) The prospective adoptive parents shall be declared eligible and suitable by the specialised adoption agency based upon the home study report and supporting documents and in case any prospective adoptive parent is not declared eligible or suitable, the reasons for the same shall be recorded in the CARINGS.\n\n

(8) The prospective adoptive parents can appeal against the decision of rejection to Central Adoption Resource Authority.  This appeal shall be disposed of within fifteen days and the decision of Central Adoption Resource Authority in this regard shall be binding.\n\n

(9) The adoption of a child by the prospective adoptive parents, after completion of their registration and home study report, shall depend upon the availability of a suitable child.\n\n
</string>
    <string name="bal_asha_child_dev_text">Bal Asha Trust has successfully rehabilitated many special needs children.\n\n
<b>It has found that many children are diagnosed late in life for their developmental problems due to these corrective majors are unsuccessful. We have realised that early intervention in these children’s life can make a major difference.</b>\n\n  

To support such children and families at an early stage Bal Asha Trust has revamped its clinic and dispensary to “Bal Asha Child Development Centre”.  The centre has a team of trained professionals for the assessments and therapies for children with developmental delays.\n
</string>
    <string name="key_services"><b>Key Services</b>\n\n
        Developmental Paediatric
Assessments High Risk New Born /
Follow up Neuron Development Therapy (PT)\n\n
Early Intervention Centre IQ Tests and Assessments\n\n
Autism Intervention Services\n\n
Remedial Education Adolescence\n\n
Guidance and Counselling\n</string>
    <string name="team_text"><b>The Team</b>\n\nDevelopmental Pediatrician Neuro-developmental Therapist\n\n
 Occupational Therapist\n\n

Speech Therapist\n\n

Counseling  Psychologist\n\n

Clinical Psychologist\n\n

Remedial Educator\n\n

Social Worker\n</string>
    <string name="child_dev_centre_contact"> Please contact:-\n\n

<b>Bal Asha Child Development Centre\n\n

B2, ground floor, Saifee park, Opp. Isabel School, Dr. Mascarnes Road, Mazgaon,

Mumbai- 400010.\n\n

Timing: 10am – 6 pm (Monday – Saturday)\n\n

Phone:  022-23702444 | Email: <font color = "green">balashatrust.cdc@gmail.com</font></b></string>
</resources>