<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context="thuglife.balasha.Fragments.DevelopmentCentreFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bal_asha_child_dev_text"
                android:padding="5dp"
                android:textColor="@color/list_item_title"
                android:fontFamily="sans-serif"
                android:id="@+id/child_dev_heading"
                android:textSize="16sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/child_dev_hoz_layout"
                android:layout_below="@+id/child_dev_heading">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/key_services"
                        android:textColor="@color/list_item_title"
                        android:padding="5dp"
                        android:fontFamily="sans-serif"
                        android:id="@+id/key_services_textview"
                        android:gravity="center"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/team_text"
                        android:id="@+id/team_text"
                        android:padding="5dp"
                        android:textColor="@color/list_item_title"
                        android:fontFamily="sans-serif"
                        android:gravity="center"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/child_dev_centre_contact"
                android:textColor="@color/list_item_title"
                android:padding="5dp"
                android:fontFamily="sans-serif"
                android:textSize="14sp"
                android:layout_below="@id/child_dev_hoz_layout"
                android:id="@+id/textView2" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
